--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/index.ts"
+  },
   "dependencies": {
     "@clerk/nextjs": "^4.21.8",
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^4.16.1",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "mongoose": "^7.3.1",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -25,6 +30,7 @@
   },
   "devDependencies": {
     "daisyui": "^3.1.6",
-    "prisma": "^4.14.1"
+    "prisma": "^4.16.1",
+    "ts-node": "^10.9.1"
   }
 }
