--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.17",
+    "jotai": "^2.2.1",
     "mongoose": "^7.3.1",
     "next": "13.4.3",
     "postcss": "8.4.23",
